--- a/cgmes/cgmes-conformity/src/test/resources/conformity-modified/cas-1.1.3-data-4.0.3/MiniGrid/NodeBreaker/BaseCase_Complete_v3_limits/changes
+++ b/cgmes/cgmes-conformity/src/test/resources/conformity-modified/cas-1.1.3-data-4.0.3/MiniGrid/NodeBreaker/BaseCase_Complete_v3_limits/changes
@@ -39,3 +39,18 @@ Terminal _912cc25e-78d9-43a6-a77e-b2b7bb76688b (T6_1, 10.5 kV)
 PowerTransformer _6c89588b-3df5-4120-88e5-26164afb43e9 (T6 on Sub4)
 Assign to Switch _d0119330-220f-4ed3-ad3c-f893ad0534fb (BREAKER18 of T6)
 Should be left unassigned
+
+5 - Add a TATL for same acceptable duration (only lowest value should be kept)
+
+Duplicate TATL Emergency 
+Acceptable duration 60
+OperationalLimitSet _b3e74f7e-f257-44f1-a558-39d2476dbc54
+Original value was 735
+Modified duplicated limit to have value 734
+
+6 - Add a PATL for same equipment (only lowest value should be kept)
+
+Duplicate PATL Normal
+OperationalLimitSet _b3e74f7e-f257-44f1-a558-39d2476dbc54
+
+
